--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </audio>
 
     <div class="container">
-        <div id="text" class="merry-christmas">淇淇纯猪鼻</div>
+        <div id="text" class="merry-christmas">绮淇纯猪鼻</div>
         <canvas id="treeCanvas"></canvas>
     </div>
 
@@ -209,3 +209,4 @@
     </script>
 </body>
 </html>
+
